--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     <!-- Begin page content -->
     <div class="container">
       <h1>Bitcoin Multisig Hardware Wallet Comparison</h1>
-      <p>
-        <a href="https://www.youtube.com/watch?v=vt-zXEsJ61U">"Your keys, your bitcoin. Not your keys, not your bitcoin."</a>
-        <span class="pull-right">
-          <a href="https://twitter.com/mflaxman?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @mflaxman</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </span>
-      </p>
+
 
       <table class="table table-bordered">
 
@@ -42,13 +37,13 @@
           <tr>
             <th scope="col"></th>
             <th scope="col">
-              <h4><a href="https://shapeshift.io/keepkey/">KeepKey</a></h4>
+              <h4><a href="http://lddy.no/a73o">KeepKey</a></h4>
             </th>
             <th scope="col">
-              <h4><a href="https://shop.ledger.com/products/ledger-nano-s">Ledger Nano S</a></h4>
+              <h4><a href="https://shop.ledger.com/products/ledger-backup-pack?r=ed14cd60950a&tracker=github">Ledger Nano S</a></h4>
             </th>
             <th scope="col">
-              <h4><a href="https://shop.trezor.io/product/trezor-model-t">Trezor Model T</a></h4>
+              <h4><a href="https://shop.trezor.io/?offer_id=10&aff_id=3525&source=github">Trezor Model T</a></h4>
             </th>
             <th scope="col">
               <h4><a href="https://coldcardwallet.com/">Coldcard™ Mk3</a></h4>
@@ -61,21 +56,21 @@
             <th scope="row"></th>
             <td>
               <div style="height: 100px; overflow:auto;">
-                <a href="https://shapeshift.io/keepkey/">
+                <a href="http://lddy.no/a73o">
                   <img height="100%" src="https://shapeshift.io/keepkey/images/colors1.png">
                 </a>
               </div>
             </td>
             <td>
               <div style="height: 100px; overflow:auto;">
-                <a href="https://shop.ledger.com/products/ledger-nano-s">
+                <a href="https://shop.ledger.com/products/ledger-backup-pack?r=ed14cd60950a&tracker=github">
                   <img height="100%" src="ledger.png">
                 </a>
               </div>
             </td>
             <td>
               <div style="height: 100px; overflow:auto;">
-                <a href="https://shop.trezor.io/product/trezor-model-t">
+                <a href="https://shop.trezor.io/?offer_id=10&aff_id=3525&source=github">
                   <img height="100%" src="https://shop.trezor.io/static/img/product/T2.jpg">
                 </a>
               </div>
@@ -504,26 +499,7 @@
         </li>
       </ol>
       
-      <p>
-        <strong>Q: What about hardware wallet X?</strong><br />
-        <strong>A:</strong>
-        I excluded hardware wallets that don't support multisig as this seems fundamentally broken for a security product.
-        These include
-        <a href="https://shiftcrypto.ch/bitbox02/">BitBox02</a>,
-        <a href="https://coolwallet.io/">CoolWallet S</a>,
-        <a href="https://www.ellipal.com/collections/ellipal/products/hardwarewallet">Ellipal</a>,
-        <a href="https://bitfi.com/">BitFi</a>, and
-        <a href="https://safepal.io/">SafePal S1</a>,
-        <a href="https://shop.cobo.com/products/cobo-vault">Cobo Vault</a>
-        (<a href="https://twitter.com/CoboVault/status/1149918869026476033">supports multisig but not with competitors</a>).
-        If any of these add multi HW wallet multisig support, it might be worth reconsidering them.
-        While the best measure of supporting multisig across different hardware manufacturers is using Bitcoin Core (ideally with <a href="https://github.com/bitcoin/bips/blob/master/bip-0174.mediawiki">BIP174</a>), hardware wallet <a href="http://docs.electrum.org/en/latest/hardware-linux.html#python-libraries">multisig with Electrum</a> is another possibility.
-
-        <span class="small">
-          TODO: consider adding <a href="https://www.archos.com/products/crypto/archos_safetmini/index.html">Archos Safe-T mini</a>?
-        </small>
-
-      </p>
+     
 
       <a
         class="github-fork-ribbon right-bottom fixed"
@@ -545,3 +521,4 @@
     </script>
   </body>
 </html>
+
